kubernetes/apps/jellyfin/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8096
      targetPort: http
      protocol: TCP
    - name: https
      port: 8920
      targetPort: https
      protocol: TCP
  selector:
    app.kubernetes.io/name: jellyfin
