kubernetes/apps/jellyfin/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "Jellyfin"
  name: jellyfin
  namespace: jellyfin
spec:
  hostnames: ["jellyfin.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: jellyfin
          namespace: jellyfin
          port: 8096
      matches:
        - path:
            type: PathPrefix
            value: /
